tests/ui/pattern/pattern-match-invalid-variant.stderr
error[E0599]: no variant, associated function, or constant named `Hsl` found for enum `Color` in the current scope
  --> $DIR/pattern-match-invalid-variant.rs:14:16
   |
LL | enum Color {
   | ---------- variant, associated function, or constant `Hsl` not found for this enum
...
LL |         Color::Hsl(h, s, l) => {
   |                ^^^ variant, associated function, or constant not found in `Color`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
